--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 			<!-- Blox -->
 			<div class="person" role="listitem">
 				<div class="avatar">
-					<img src="Blox.Png" alt="Blox">
+					<img src="Blox.png" alt="Blox">
 					<div class="name-overlay">Blox</div>
 				</div>
 				<div class="meta">
@@ -164,7 +164,7 @@
 			<!-- Ruk -->
 			<div class="person" role="listitem">
 				<div class="avatar">
-					<img src="Ruk.Png" alt="Ruk">
+					<img src="Ruk.png" alt="Ruk">
 					<div class="name-overlay">Ruk</div>
 				</div>
 				<div class="meta">
@@ -174,7 +174,7 @@
 			<!-- Smile -->
 			<div class="person" role="listitem">
 				<div class="avatar">
-					<img src="Smile.Png" alt="Smile">
+					<img src="Smile.png" alt="Smile">
 					<div class="name-overlay">Smile</div>
 				</div>
 				<div class="meta">
@@ -234,4 +234,5 @@
 	</script>
 </body>
 </html>
+
 
