--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 					<div class="name-overlay">Blox</div>
 				</div>
 				<div class="meta">
-					<div class="rank">Police Commissioner</div>
+					<div class="rank">Chief of Police </div>
 				</div>
 			</div>
 			<!-- Ruk -->
@@ -168,7 +168,7 @@
 					<div class="name-overlay">Ruk</div>
 				</div>
 				<div class="meta">
-					<div class="rank">Deputy Police Commissioner</div>
+					<div class="rank">Vice Chief of Police</div>
 				</div>
 			</div>
 			<!-- Smile -->
@@ -178,7 +178,7 @@
 					<div class="name-overlay">Smile</div>
 				</div>
 				<div class="meta">
-					<div class="rank">Secretary of Police</div>
+					<div class="rank">Chief Superintendent</div>
 				</div>
 			</div>
 		</div>
@@ -234,5 +234,6 @@
 	</script>
 </body>
 </html>
+
 
 
