--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
 				<dt>Police Sergeant</dt><dd>Members who took a Sergeant Exam Hosted by Captain+</dd>
 				<dt>Police Lieutenant</dt><dd>Members who Passed LT. apps hosted by the Commissioner or Deputy Commissioner</dd>
 				<dt>Police Captain</dt><dd>Members chosen by the SOP</dd>
-				<dt>Police Inspector</dt><dd>Members who show leadership skills and are promoted then by the Management Team</dd>
-				<dt>Police Chief Inspector</dt><dd>Members chosen by the Commissioner to lead operations of the Server</dd>
+				<dt>Deputy Commander</dt><dd>Members who show leadership skills and are promoted then by the Management Team</dd>
+				<dt>Commander</dt><dd>Members chosen by the Commissioner to lead operations of the Server</dd>
 			
-				<dt>Secretary Of Police</dt><dd>Maintaing All staff</dd>
-				<dt>Police Deputy Commissioner</dt><dd>The Deputy Owner helping with the Servers Operations</dd>
-				<dt>Police Commissioner</dt><dd>The Owner and Head of Operations</dd>
+				<dt>Chief Superintendent</dt><dd>Maintaing All staff</dd>
+				<dt>Vice Chief of Police</dt><dd>The Deputy Owner helping with the Servers Operations</dd>
+				<dt>Chief of Police</dt><dd>The Owner and Head of Operations</dd>
 			</dl>
 		</div>
 	</section>
@@ -131,12 +131,12 @@
 			<div class="rank-item" data-rank="Police Sergeant"><span>Police Sergeant</span><p class="desc">Members who took a Sergeant Exam Hosted by Captain+</p></div>
 			<div class="rank-item" data-rank="Police Lieutenant"><span>Police Lieutenant</span><p class="desc">Members who Passed LT. apps hosted by the Commissioner or Deputy Commissioner</p></div>
 			<div class="rank-item" data-rank="Police Captain"><span>Police Captain</span><p class="desc">Members chosen by the SOP</p></div>
-			<div class="rank-item" data-rank="Police Inspector"><span>Police Inspector</span><p class="desc">Members who show leadership skills and are promoted then by the Management Team</p></div>
-			<div class="rank-item" data-rank="Police Chief Inspector"><span>Police Chief Inspector</span><p class="desc">Members chosen by the Commissioner to lead operations of the Server</p></div>
+			<div class="rank-item" data-rank="Deputy Commander"><span>Police Inspector</span><p class="desc">Members who show leadership skills and are promoted then by the Management Team</p></div>
+			<div class="rank-item" data-rank="Commander"><span>Police Chief Inspector</span><p class="desc">Members chosen by the Commissioner to lead operations of the Server</p></div>
 			
-			<div class="rank-item" data-rank="Secretary Of Police"><span>Secretary Of Police</span><p class="desc">Maintaing All staff</p></div>
-			<div class="rank-item" data-rank="Police Deputy Commissioner"><span>Police Deputy Commissioner</span><p class="desc">The Deputy Owner helping with the Servers Operations</p></div>
-			<div class="rank-item" data-rank="Police Commissioner"><span>Police Commissioner</span><p class="desc">The Owner and Head of Operations</p></div>
+			<div class="rank-item" data-rank="Chief Superintendent"><span>Secretary Of Police</span><p class="desc">Maintaing All staff</p></div>
+			<div class="rank-item" data-rank="Vice Chief of Police"><span>Police Deputy Commissioner</span><p class="desc">The Deputy Owner helping with the Servers Operations</p></div>
+			<div class="rank-item" data-rank="Chief of Police"><span>Police Commissioner</span><p class="desc">The Owner and Head of Operations</p></div>
 			<div class="rank-item" data-rank="Server Owner"><span>Server Owner</span><p class="desc">Navigate to Server Owner page</p></div>
 		</div>
 	</section>
@@ -234,6 +234,7 @@
 	</script>
 </body>
 </html>
+
 
 
 
